--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  ### BR Misc ###
 
- #Interest Groups
+ ## Interest Groups
 
  ig_orthodox_patriarch: "Klirikoí"
  ig_orthodox_patriarch_desc: "#lore The Klirikoí are the spiritual guardians of the Basileía Romaíon. Led by the Ecumenical Patriarch of Konstantinopolis, they guide the faithful, safeguard Orthodox traditions, and wield significant influence over the moral and political life of the empire. Through religious ceremonies, education, and ecclesiastical administration, they ensure that divine order is reflected within the state.#!"
@@ -94,7 +94,8 @@
  ig_cultus_prometheo_desc: "#lore The Cultus Prometheo is a radical philosophical and religious movement venerating human ingenuity, enlightenment, and rebellion against tyranny. Inspired by the myth of Prometheus, they seek to ignite a new era of liberation and knowledge.#!"
 
 
-# ideology
+ ## ideologies
+
  ideology_romaioi_patriarch: "Ecumenical Patriarchate"
  ideology_romaioi_patriarch_desc: "#lore The Ecumenical Patriarchate stands as the highest spiritual authority in the Orthodox world. The Patriarch of Konstantinopolis is revered as the foremost guardian of the faith and the spiritual father of the Basileía Romaíon. Charged with overseeing religious ceremonies, safeguarding doctrine, and guiding the souls of the empire, the Patriarchate weaves together the sacred and temporal realms.#!"
 
@@ -104,33 +105,32 @@
  ideology_romaioi_loyalist: "Stratiótikoi Loyalist"
  ideology_romaioi_loyalist_desc: "#lore The Stratiótikoi are unwavering in their devotion to the Basileus, pledging absolute loyalty to his rule as the living embodiment of the Empire and the Orthodox faith.#!"
 
- ideology_romaioi_isolationist: "Rural Agenda"
- ideology_romaioi_isolationist_desc: "#lore This group champions the interests of the countryside, advocating for a focus on local traditions, agricultural self-sufficiency, and the defense of rural communities against the influence of urban elites and foreign ideas.#!"
+ ideology_romaioi_isolationist: "Chōrikḗ Phylakḗ"
+ ideology_romaioi_isolationist_desc: "#lore The Chōrikḗ Phylakḗ—“Guardians of the Countryside”—advocate for the preservation of rural life, ancestral customs, and local self-sufficiency. Suspicious of urban intrigue and foreign innovation, they seek to defend the dēmos from both cosmopolitan corruption and overreach from the Imperial Court.#!"
 
- ideology_romaioi_agrarian: "Agrarianism"
- ideology_romaioi_agrarian_desc: "#lore Agrarian thinkers believe that the strength of the Basileía Romaíon lies in its farmers and landowners. They seek to protect and empower those who work the land, viewing agriculture as the bedrock of civilization and imperial prosperity.#!"
+ ideology_romaioi_agrarian: "Geōrgikē Arkhḗ"
+ ideology_romaioi_agrarian_desc: "#lore Followers of the Geōrgikē Arkhḗ believe the foundation of the Basileía Romaíon is the fertile land and those who till it. They revere the farming estates and smallholders as the eternal pillars of imperial strength, cultural continuity, and divine harmony.#!"
 
  ideology_romaioi_paternalistic: "SPQR Legacy"
  ideology_romaioi_paternalistic_desc: "#lore Heirs to the senatorial traditions of our Roman forefathers, the Patrikíoí (Patricians) alone are deemed worthy to guide the Synkletos (Senate). Governance must be entrusted to those of noble birth and ancient lineage, for only they possess the wisdom to rule.#!"
 
- ideology_romaioi_hegemony: "Romaíoi Hegemony"
+ ideology_romaioi_hegemony: "Romaíoi Hēgemonía"
  ideology_romaioi_hegemony_desc: "#lore For millennia, our Roman and Hellenic ancestors carried the torch of civilization across the known world. Since the fall of the West, barbarian kings have usurped its light. It is our sacred duty to reclaim our rightful role as the guides and masters of Christendom, bringing order and enlightenment—by peace or by conquest.#!"
 
- ideology_romaioi_meritocratic: "Meritocracy"
- ideology_romaioi_meritocratic_desc: "#lore This ideology holds that honor, office, and wealth should be the rewards of ability and achievement, not mere birthright. A strong empire is one where talent and service are recognized above all else.#!"
+ ideology_romaioi_meritocratic: "Timokratía"
+ ideology_romaioi_meritocratic_desc: "#lore Advocates of Timokratía—“rule by merit”—believe office, prestige, and wealth must flow to the most able, not the most ancient. Let the worthiest among the logothetai, scholars, and strategoi shape the fate of the Empire. Only thus shall Romaíon endure.#!"
+
+ ideology_romaioi_anti_clerical: "Logikē Kybernēsis"
+ ideology_romaioi_anti_clerical_desc: "#lore Proponents of Logikē Kybernēsis—“rational governance”—believe the Empire must be guided by logos, not dogma. They seek to curtail the influence of the ecclesiastical hierarchy in civic affairs, placing science, philosophy, and worldly knowledge at the heart of law and education.#!"
+
+ ideology_romaioi_republican: "Sýllogos tōn Sōphrónōn"
+ ideology_romaioi_republican_desc: "#lore The Sýllogos tōn Sōphrónōn, or “Council of the Wise,” advocates for an imperial order advised—or limited—by the learned. In their eyes, governance is a sacred duty that should be shared by men of letters, virtue, and civic excellence—not dictated solely by inheritance.#!"
+
+ ideology_romaioi_liberal: "Nomikḗ Eleuthería"
+ ideology_romaioi_liberal_desc: "#lore The adherents of Nomikḗ Eleuthería—“liberty under law”—champion the protection of individual rights, fair magistracy, and universal justice. They believe the Basileus must rule not merely by might, but in fidelity to a sacred covenant with the people, founded upon reason and equity.#!"
 
  ideology_frontier_expansionist: "Frontier Expansionist"
- ideology_frontier_expansionist_desc: "#lore Advocates for the aggressive expansion of the empire's frontiers, viewing untamed lands as ripe for conquest, settlement, and exploitation of both their natural wealth and their native peoples.#!"
-
- ideology_romaioi_anti_clerical: "Secularist"
- ideology_romaioi_anti_clerical_desc: "#lore This group seeks to diminish the power of organized religion over governance and education. They argue that the future of the empire must be guided by reason, science, and enlightened principles rather than ecclesiastical dogma.#!"
-
- ideology_romaioi_republican: "Scholar-Gentry"
- ideology_romaioi_republican_desc: "#lore Advocates for a system where the Basileus is advised—or even constrained—by a council of the learned and virtuous. They believe wisdom, not mere inheritance, should guide the fate of the empire.#!"
-
- ideology_romaioi_liberal: "Liberal"
- ideology_romaioi_liberal_desc: "#lore This ideology holds that the Basileus must protect and promote individual liberties, the rule of law, and equal justice for all subjects, recognizing these values as essential to a flourishing and just society.#!"
-
+ ideology_frontier_expansionist_desc: "Advocates for the aggressive expansion of the empire's frontiers, viewing untamed lands as ripe for conquest, settlement, and exploitation of both their natural wealth and their native peoples."
 
  ideology_sarmatism_paternalistic: "Sarmatism"
  ideology_sarmatism_paternalistic_desc: "Sarmatism (or Sarmatianism; Polish: Sarmatyzm; Lithuanian: Sarmatizmas) is an ethno-cultural ideology within the Polish–Lithuanian Commonwealth. It is the dominant Baroque culture and ideology of the nobility (szlachta). Together with the concept of \"Golden Liberty\", it formed a central aspect of the Commonwealth's culture and society. At its core is the unifying belief that the people of the Polish–Lithuanian Commonwealth descended from the ancient Iranian Sarmatians, the legendary invaders of contemporary Polish lands in antiquity"
@@ -139,7 +139,6 @@
  ideology_cossacks: "Cossacks"
  ideology_cossacks_desc: "The Cossacks are a semi-nomadic and semi-militarized people, who, while under the nominal suzerainty of various Eastern European states, are allowed a great degree of self-governance in exchange for military service. Although numerous linguistic and religious groups came together to form the Cossacks, most of them coalesced and became East Slavic-speaking Orthodox Christians. The rulers of the Polish–Lithuanian Commonwealth and Russia endowed Cossacks with certain special privileges in return for the military duty to serve as irregular troops (mostly cavalry). The various Cossack groups are organized along military lines, with large autonomous groups called hosts. Each host has a territory consisting of affiliated villages called stanitsas."
  ideology_polish_patriotism: "Liberal Patriotism"
- ideology_enlightened_despotism: "Enlightened Despotism"
  ideology_polish_patriotism_desc: "This group's loyal to the state and it's institution, however they don't wish for state to encroach into their private lives and bussineses."
  ideology_enlightened_despotism_desc: "This group views state and it's leader as a wise figure, that ought to be benevolent to it's people while also pragmatic when the time's require it."
  ideology_mongol_jingoist: "Mongol Jingoist"
@@ -162,6 +161,9 @@
  ideology_patrician_desc: "This group considers aristocratic merchant families to be the natural ruling class of society."
 
 # Leaders
+ ideology_enlightened_despotism: "Enlightened Despotism"
+ ideology_enlightened_despotism_desc: "The ruler is the first servant of the state. Enlightened Despotism blends autocratic authority with the language of progress. Advocates support centralized rule, rational governance, and selective reform—so long as it flows from the top down. It promises efficiency and modernization without surrendering power to parliaments or mobs. Enlightened despots fund schools, promote science, and codify laws—but always with the crown as the guiding star."
+
  br_ideology_absolutist: "Absolutist"
  br_ideology_absolutist_desc: "#lore This character believes in the divine and unquestionable authority of the monarch. They see no need for parliaments, senates, or assemblies to interfere with sovereign rule.#!"
 
