--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -214,7 +214,7 @@
  br_ig_trait_right_of_rebellion_desc: "When the government seems to be losing the Mandate of Heaven, it is natural and just to seek a worthy replacement."
 
  #Companies
- company_byz_ric: "Romaíon Emporikí Etaireía"
+ company_byz_ric: "Emporikē Hetaireia tēs Indikēs"
  company_ven_trade: "Venice Trade League"
  company_ven_arsenal: "Venice Arsenal"
  company_gen_trade: "Genoa Trade League"
