palais_de_la_cite
- Added br_building_palais_de_la_cite

--- a/localization/english/br_buildings_l_english.yml
+++ b/localization/english/br_buildings_l_english.yml
@@ -9,6 +9,7 @@
  br_building_great_palace: "Méga Palátion"
  br_building_hippodrome: "Hippodrome"
  br_building_versailles: "Palace of Versailles"
+ br_building_palais_de_la_cite: "Palais de la Cité"
  br_building_jerusalem: "Jerusalem"
  br_building_mecca: "Mecca"
  br_building_venice: "Venice Arsenal"
