--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -6,8 +6,8 @@
  br_je_hre_impending_revolution_progress_reached_max: "The Revolution has erupted."
 
  ##journal entries
- je_impending_revolution: "The Revolution"
- je_impending_revolution_reason: "The situation in the HRE has grown desperate and the people have had enough. If we don’t do anything then the situation could get out of control and our 1000 year government could be overthrown. We will have to consider carefully how to deal with the situation, do we reform the state or do we choose to suppress these so-called revolutionaries. In case we fail to do anything the consequences could be disastrous."
+ je_hre_impending_revolution: "The Revolution"
+ je_hre_impending_revolution_reason: "The situation in the HRE has grown desperate and the people have had enough. If we don’t do anything then the situation could get out of control and our 1000 year government could be overthrown. We will have to consider carefully how to deal with the situation, do we reform the state or do we choose to suppress these so-called revolutionaries. In case we fail to do anything the consequences could be disastrous."
  finished_revolution_tt: "We have dealt with the revolution in a manner of our choice."
  je_revolution_reform: "Revolution: Reform"
  je_revolution_reform_reason: "The time has come to reform the state in order to halt a revolution."
