added a pro and anti feudalism movement
-added a pro and anti feudalism movement, with respective ideologies

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -5,6 +5,14 @@
  br_hre_impending_revolution_progress_bar_desc: "As this increases the Revolution draws closer."
  br_je_hre_impending_revolution_progress_reached_max: "The Revolution has erupted."
 
+ br_hre_impending_revolution_1de_estate_progress_bar: "First estate disatisfaction"
+ br_hre_impending_revolution_1de_estate_progress_bar_desc: "First estate disatisfaction"
+ br_hre_impending_revolution_2de_estate_progress_bar: "Second estate disatisfaction"
+ br_hre_impending_revolution_2de_estate_progress_bar_desc: "Second estate disatisfaction"
+ br_hre_impending_revolution_3de_estate_progress_bar: "Third estate disatisfaction"
+ br_hre_impending_revolution_3de_estate_progress_bar_desc: "Third estate disatisfaction"
+
+
  ##journal entries
  je_hre_impending_revolution: "The Revolution"
  je_hre_impending_revolution_reason: "The situation in the HRE has grown desperate and the people have had enough. If we don’t do anything then the situation could get out of control and our 1000 year government could be overthrown. We will have to consider carefully how to deal with the situation, do we reform the state or do we choose to suppress these so-called revolutionaries. In case we fail to do anything the consequences could be disastrous."
@@ -25,3 +33,15 @@
  ##Modifiers
  br_modifier_unreliable_food_security: "Unreliable Food Security"
  br_modifier_unpopular_regime: "Unpopular Regime"
+
+ # political movements
+ br_movement_anti_feudalism: "Anti Feudalism Movement"
+ br_movement_anti_feudalism_name: "$br_movement_anti_feudalism$"
+ br_movement_pro_feudalism: "Pro Feudalism Movement"
+ br_movement_pro_feudalism_name: "$br_movement_pro_feudalism$"
+
+ # ideologies
+ ideology_anti_feudalism: "Anti Feudalism"
+ ideology_anti_feudalism_desc: "This character opposes the ideas of Feudalism."
+ ideology_pro_feudalism: "Pro Feudalism"
+ ideology_pro_feudalism_desc: "This character believes ones worth and standing in society is derived from birth."
