--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -184,6 +184,7 @@
  MNG_ADJ: "Mirning"
  NNV: "Inuit Nunaat"
  ATB: "Yedát’įįh Dene"
+ MAD: "Mpanjakan’i Madagasikara"
  
   # Dynamic countries
  dyn_c_sicily: "Katepaníkion Italías"
