--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -224,6 +224,10 @@
  company_oma_trade: "sharikat euman liltijara"
  company_florence_bank: "Medici Bank"
 
+ #Prestige goods
+ prestige_good_br_byz_silk: "Chrysósērion"
+ prestige_good_br_ely_silk: "Auriloma Silk"
+
  #State Regions
 
  #region_aegypt: "Aegypt"
