updated the progress bar's functionality
-updated the progress bar's functionality, so they trigger the correct effects when the revolution progress has reached max
-Now I still need to add the event chain for when the revolution erupts

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -16,7 +16,10 @@
  ##journal entries
  je_hre_impending_revolution: "The Revolution"
  je_hre_impending_revolution_reason: "The situation in the HRE has grown desperate and the people have had enough. If we don’t do anything then the situation could get out of control and our 1000 year government could be overthrown. We will have to consider carefully how to deal with the situation, do we reform the state or do we choose to suppress these so-called revolutionaries. In case we fail to do anything the consequences could be disastrous."
+ br_je_hre_impending_revolution_completion_header: "Will prevent #b Revolution#! if:\n"
  finished_revolution_tt: "We have dealt with the revolution in a manner of our choice."
+ br_je_hre_impending_revolution_failure_header: "The #b Revolution#! will erupt if:\n"
+ br_je_hre_impending_revolution_on_failure_header: "The #b Revolution#! erupts:"
  je_revolution_reform: "Revolution: Reform"
  je_revolution_reform_reason: "The time has come to reform the state in order to halt a revolution."
  je_revolution_suppress: "Revolution: Suppress"
