South American Decentralized merge
- nativized the names all meaning Culture tribes or Tribes of Culture except for Amazon because it seems there is no dominant language that I could find.

--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -185,6 +185,11 @@
  NNV: "Inuit Nunaat"
  ATB: "Yedát’įįh Dene"
  MAD: "Mpanjakan’i Madagasikara"
+
+ GNI: "Ava Guaraní"
+ TPI: "Abaé Tupinambá"
+ PAT: "Mapuche Ñi Lof"
+ AMZ: "Tribes of the Amazon"
  
   # Dynamic countries
  dyn_c_sicily: "Katepaníkion Italías"
