companies and prestige goods
- reworked the companies
- added new textiles companies for Venice and ERE.
- added two new luxury clothing prestige goods for each company.
- Moved a lot of the company building types to extension buildings
- converted and resized all the company logos and added some new ones.

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -223,10 +223,14 @@
  company_jap_trade: "Nihon bōekigaisha"
  company_oma_trade: "sharikat euman liltijara"
  company_florence_bank: "Medici Bank"
+ company_br_byz_textiles: "Chrysóntima Ergastḗrion"
+ company_br_ven_textiles: "Tessitura di Rialto"
 
  #Prestige goods
  prestige_good_br_byz_silk: "Chrysósērion"
  prestige_good_br_ely_silk: "Auriloma Silk"
+ prestige_good_br_byz_clothes: "Chrysórrapha"
+ prestige_good_br_ven_clothes: "Seta Serenissima"
 
  #State Regions
 
