added a Imperial Residence feature

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -36,6 +36,8 @@
  ##Modifiers
  br_modifier_unreliable_food_security: "Unreliable Food Security"
  br_modifier_unpopular_regime: "Unpopular Regime"
+ br_modifier_antiquated_regime: "Antiquated_regime"
+ br_modifier_imperial_residence: "Imperial Residence"
 
  # political movements
  br_movement_anti_feudalism: "Anti Feudalism Movement"
