Dynamic ERE names redux
- Added the main name to Monarchy
- Added a new Senate name which is for Republic with only upper class voting.
- Renamed all the other government names.

--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -25,7 +25,7 @@
  MON_ADJ: "Dioklean"
  #BUK: "Khorasan"
  #BUK_ADJ: "Khorasani"
- BYZ: "Basileía Romaíon"
+ BYZ: "Romanía"
  BYZ_ADJ: "Romaíon"
  HRE: "Western Europe"
  HRE_ADJ: "Western European"
