--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -204,14 +204,24 @@
  dyn_c_khazer_adj: "Khazer"
  dyn_c_HRE: "Holy Roman Empire"
  dyn_c_HRE_adj: "Holy Roman"
- dyn_c_byzantium: "Basileía Romaíon"
- dyn_c_byzantine_empire: "Basileía Romaíon"
- dyn_c_byzantine_republic: "Romaíon Republic"
- dyn_c_patriarchal_synod: "Romaíon Holy Synod"
- dyn_c_byzantine_peoples_republic: "Romaíon People's Republic"
- dyn_c_byzantine_peoples_front: "Romaíon People's Front"
- dyn_c_peoples_front_of_byzantium: "People's Front of Romaíon"
- dyn_c_popular_front_of_byzantium: "Popular Front of Romaíon"
+
+ #Monarchy
+ dyn_c_br_basileia_romaion: "Basileía Rōmaíōn"
+ dyn_c_br_basileia_romaion_adj: "Rōmaíōn"
+
+ #Optional names
+ dyn_c_re: "Roman Empire"
+ dyn_c_ere: "Eastern Roman Empire"
+ dyn_c_romania: "Romanía"
+ dyn_c_re_adj: "Roman"
+ dyn_c_rhomania_i: "Basileía tōn Rhōmaíōn"
+ dyn_c_rhomania_ii: "Rhōmanía"
+
+ dyn_c_br_senate_republic: "Senatoria Politeía Rōmaíōn"
+ dyn_c_byzantine_republic: "Politeía Rōmaíōn"
+ dyn_c_patriarchal_synod: "Basileía tou Theou"
+ dyn_c_byzantine_peoples_republic: "Koinobasileía Rōmaíōn"
+ dyn_c_byzantine_peoples_front: "Dēmotikḗ Koinōnía Rōmaíōn"
 
  dyn_c_kurd_princes: "Kurdish Principalities"
  dyn_c_kurd_princes_adj: "Kurdish"
@@ -223,7 +233,6 @@
  dyn_c_alemannia_germany_name: "Alemannia"
  dyn_c_lotharingia_germany_name: "Lotharingia"
 
-
  dyn_c_byz_armenia: "Armeníōn"
  dyn_c_byz_armenia_adj: "Armenikoí"
  dyn_c_eng_armenia: "Armenia"
@@ -232,6 +241,12 @@
  dyn_c_byz_georgia_adj: "Iberikón"
  dyn_c_eng_georgia: "Georgia"
  dyn_c_eng_georgia_adj: "Georgian"
+
+ ere_re_name_tt: "Name of our country will be changed to 'Roman Empire'"
+ ere_ere_name_tt: "Name of our country will be changed to 'Eastern Roman Empire'"
+ ere_romania_name_tt: "Name of our country will be changed to 'Romanía'"
+ ere_rhomania_i_name_tt: "Name of our country will be changed to 'Basileía tōn Rhōmaíōn'"
+ ere_rhomania_ii_name_tt: "Name of our country will be changed to 'Rhōmanía'"
 
  #Decentralized nations
   #Asia
