added loc and a game_concept with tooltip
-added loc and a game_concept with tooltip

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -32,6 +32,11 @@
  hre_revolution_events.5.d: "Food insecurity"
  hre_revolution_events.5.f: "Food insecurity"
  hre_revolution_events.5.a: "This isn't good"
+ #Revolution erupts events
+ hre_revolution_events.201.t: "March on the Royal Residence"
+ hre_revolution_events.201.d: "A large number of members of the 3de estate have decided to march on the [br_concept_imperial_residence]."
+ hre_revolution_events.201.f: "At the Imperial Residence in $br_imperial_residence_building_loc$. The door of the Imperial chamber slams open, the Emperor looks up form his work visably irritated, to the man who just stormed in unannounced, the completely out of breath tries to speak. 'They're ... they're comming'. Early this morning a large mob of members of the 3de estate had gathered on a square in Paris. It started out as a simple protest for change, but it quickly escalated and now the protesters have decided to petition their demands directly to the Emperor. So now they are on their way, on their way to the Imperial Palace. The Emperor starts franticly pacing the room, what should he do, should he flee, should he call in the Military or should he try to negotiate with the mob."
+ hre_revolution_events.201.a: "This does not look good."
 
  ##Modifiers
  br_modifier_unreliable_food_security: "Unreliable Food Security"
@@ -50,3 +55,11 @@
  ideology_anti_feudalism_desc: "This character opposes the ideas of Feudalism."
  ideology_pro_feudalism: "Pro Feudalism"
  ideology_pro_feudalism_desc: "This character believes ones worth and standing in society is derived from birth."
+
+ #Imperial Residence
+ br_imperial_residence_building_loc: "[GetPlayer.MakeScope.GetVariable( 'br_imperial_residence_var' ).GetBuilding.GetName]"
+ #  br_imperial_residence_building_loc: "[SCOPE.sBuilding('br_imperial_residence_scope').GetName]"
+ br_concept_imperial_residence:1 "Imperial Residence"
+ br_concept_imperial_residence:0 "Royal Residence"
+ br_concept_imperial_residence_desc:1 "The $br_concept_imperial_residence$ is the location wheir the Imperial families lives, which is currently $br_imperial_residence_building_loc$."
+#tooltip:tooltip_tag,tooltip_body,cooltip your text here#!
