--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -275,39 +275,39 @@
  #Goods
 
  spices: "Spices"
- modifier_building_output_spices_add: "@spices! Spices output per level"
- modifier_building_output_spices_add_desc: "The amount of @spices! Spices produced by buildings"
- modifier_building_group_bg_spices_plantations_throughput_add: "$building_spices_plantation$ [concept_throughput]"
- modifier_building_group_bg_spices_plantations_throughput_add_desc: "A bonus or penalty to both input and output of $building_spices_plantation$"
- modifier_goods_output_spices_add: "@spice!$spice$ output"
- modifier_goods_output_spices_add_desc: "The amount of @spice!$spice$ produced by buildings"
- modifier_goods_input_spices_add: "@spice!$spice$ input"
- modifier_goods_input_spices_add_desc: "The amount of @spice!$spice$ consumed by buildings"
- modifier_goods_output_spices_mult: "Building @spice!$spice$ output"
- modifier_goods_output_spices_mult_desc: "A bonus or penalty to the amount of @spice!$spice$ produced by buildings"
- modifier_goods_input_spices_mult: "@spice!$spice$ input"
- modifier_goods_input_spices_mult_desc: "A bonus or penalty to the amount of @spice!$spice$ consumed"
+ building_output_spices_add: "@spices! Spices output per level"
+ building_output_spices_add_desc: "The amount of @spices! Spices produced by buildings"
+ building_group_bg_spices_plantations_throughput_add: "$building_spices_plantation$ [concept_throughput]"
+ building_group_bg_spices_plantations_throughput_add_desc: "A bonus or penalty to both input and output of $building_spices_plantation$"
+ goods_output_spices_add: "@spice!$spice$ output"
+ goods_output_spices_add_desc: "The amount of @spice!$spice$ produced by buildings"
+ goods_input_spices_add: "@spice!$spice$ input"
+ goods_input_spices_add_desc: "The amount of @spice!$spice$ consumed by buildings"
+ goods_output_spices_mult: "Building @spice!$spice$ output"
+ goods_output_spices_mult_desc: "A bonus or penalty to the amount of @spice!$spice$ produced by buildings"
+ goods_input_spices_mult: "@spice!$spice$ input"
+ goods_input_spices_mult_desc: "A bonus or penalty to the amount of @spice!$spice$ consumed"
 
 
  horse: "Horse"
- modifier_goods_output_horse_add: "@horse!$horse$ output"
- modifier_goods_output_horse_add_desc: "The amount of @horse!$horse$ produced by buildings"
- modifier_goods_input_horse_add: "@horse!$horse$ input"
- modifier_goods_input_horse_add_desc: "The amount of @horse!$horse$ consumed by buildings"
- modifier_goods_output_horse_mult: "Building @horse!$horse$ output"
- modifier_goods_output_horse_mult_desc: "A bonus or penalty to the amount of @horse!$horse$ produced by buildings"
- modifier_goods_input_horse_mult: "@horse!$horse$ input"
- modifier_goods_input_horse_mult_desc: "A bonus or penalty to the amount of @horse!$horse$ consumed"
+ goods_output_horse_add: "@horse!$horse$ output"
+ goods_output_horse_add_desc: "The amount of @horse!$horse$ produced by buildings"
+ goods_input_horse_add: "@horse!$horse$ input"
+ goods_input_horse_add_desc: "The amount of @horse!$horse$ consumed by buildings"
+ goods_output_horse_mult: "Building @horse!$horse$ output"
+ goods_output_horse_mult_desc: "A bonus or penalty to the amount of @horse!$horse$ produced by buildings"
+ goods_input_horse_mult: "@horse!$horse$ input"
+ goods_input_horse_mult_desc: "A bonus or penalty to the amount of @horse!$horse$ consumed"
 
  canal_toll: "Canal Toll"
- modifier_goods_output_canal_toll_add: "@canal_toll!$canal_toll$ output"
- modifier_goods_output_canal_toll_add_desc: "The amount of @canal_toll!$canal_toll$ produced by buildings"
- modifier_goods_input_canal_toll_add: "@canal_toll!$canal_toll$ input"
- modifier_goods_input_canal_toll_add_desc: "The amount of @canal_toll!$canal_toll$ consumed by buildings"
- modifier_goods_output_canal_toll_mult: "Building @canal_toll!$canal_toll$ output"
- modifier_goods_output_canal_toll_mult_desc: "A bonus or penalty to the amount of @canal_toll!$canal_toll$ produced by buildings"
- modifier_goods_input_canal_toll_mult: "@canal_toll!$canal_toll$ input"
- modifier_goods_input_canal_toll_mult_desc: "A bonus or penalty to the amount of @canal_toll!$canal_toll$ consumed"
+ goods_output_canal_toll_add: "@canal_toll!$canal_toll$ output"
+ goods_output_canal_toll_add_desc: "The amount of @canal_toll!$canal_toll$ produced by buildings"
+ goods_input_canal_toll_add: "@canal_toll!$canal_toll$ input"
+ goods_input_canal_toll_add_desc: "The amount of @canal_toll!$canal_toll$ consumed by buildings"
+ goods_output_canal_toll_mult: "Building @canal_toll!$canal_toll$ output"
+ goods_output_canal_toll_mult_desc: "A bonus or penalty to the amount of @canal_toll!$canal_toll$ produced by buildings"
+ goods_input_canal_toll_mult: "@canal_toll!$canal_toll$ input"
+ goods_input_canal_toll_mult_desc: "A bonus or penalty to the amount of @canal_toll!$canal_toll$ consumed"
 
   #AI Strategies
  ai_strategy_romaioi_agenda: "Romaíon Agenda"
