Added Topbar Element for ETF

--- a/localization/english/eocfm_gui_l_english.yml
+++ b/localization/english/eocfm_gui_l_english.yml
@@ -2,8 +2,16 @@
 # GUI Button
  eocfm_sidebar_button_sgui: "eocfm_sidebar_button_sgui"
  eocfm_sidebar_button_sgui_desc: "Orthodox Church"
- 
+
  # GUI Top Bar
+ eocfm_topbar_element_capacity: "eocfm_topbar_element_capacity"
+ eocfm_topbar_element_capacity_icon: "@eocfm_caesaropapism!"
+ eocfm_topbar_element_capacity_value: "#v #greece [GetPlayer.MakeScope.ScriptValue('eocfm_caesaropapism_capacity_value')]#!#!"
+ eocfm_topbar_element_capacity_tooltip: "@eocfm_caesaropapism! [concept_caesaropapism]\nBalance: [GetPlayer.MakeScope.ScriptValue('eocfm_caesaropapism_capacity_value')|+=]\n$TOOLTIP_DELIMITER$\n[GetPlayer.MakeScope.GetScriptValueDesc('eocfm_caesaropapism_capacity_value')]"
+ eocfm_topbar_element_capacity_source: "Gates of the Bosphorus"
+ eocfm_topbar_element_capacity_source_tooltip: "This element is part of the mod #v Gates of the Bosphorus#!."
+
+ # GUI Main Status Panel
  eocfm_gui_main_title: "The Eastern Orthodox Church"
  eocfm_gui_national_church_name: "The Orthodox Church of [GetPlayer.GetName]"
  eocfm_gui_national_church_desc: "As long as we do not forsake the faith, the state will be able to assert influence\nover its bishops that can be used to direct their efforts to the benefit of the state."
