--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -225,6 +225,7 @@
  company_florence_bank: "Medici Bank"
  company_br_byz_textiles: "Chrysóntima Ergastḗrion"
  company_br_ven_textiles: "Tessitura di Rialto"
+ company_hansa_trade: "Hanseatic League"
 
  #Prestige goods
  prestige_good_br_byz_silk: "Chrysósērion"
