Generic River state trait
- Added a Generic River state trait just bosnia for now but will add to other important rivers that don't have a trait.

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -262,6 +262,7 @@
  state_trait_caribbean_islands: "Caribbean Islands"
  state_trait_yemeni_coffee: "Yemeni Coffee"
  state_trait_thessalian_plain: "Thessalian Plain"
+ state_trait_major_river_systems: "Important River"
 
  automatic_irrigation_building_spices_plantation: "Automatic Irrigation"
  default_building_spices_plantation: "Basic Production"
