--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
  ##Scripted progressbars
- br_hre_impending_revolution_progress_bar: "Impending Revolution Progress"
+ br_hre_impending_revolution_progress_bar: "Impending Revolution"
  br_hre_impending_revolution_progress_bar_desc: "As this increases the Revolution draws closer."
  br_je_hre_impending_revolution_progress_reached_max: "The Revolution has erupted."
 
@@ -12,10 +12,13 @@
  br_hre_impending_revolution_3de_estate_progress_bar: "Third estate disatisfaction"
  br_hre_impending_revolution_3de_estate_progress_bar_desc: "Third estate disatisfaction"
 
+ br_impending_revolution_to_many_redicals_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_radicals_threshold_percentage')]%#! of the population are radicals."
+ br_impending_revolution_to_many_loyalists_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_radicals_threshold_percentage')]%#! of the population are radicals."
+
 
  ##journal entries
  je_hre_impending_revolution: "The Revolution"
- je_hre_impending_revolution_reason: "The situation in the HRE has grown desperate and the people have had enough. If we don’t do anything then the situation could get out of control and our 1000 year government could be overthrown. We will have to consider carefully how to deal with the situation, do we reform the state or do we choose to suppress these so-called revolutionaries. In case we fail to do anything the consequences could be disastrous."
+ je_hre_impending_revolution_reason: "The situation in the HRE has grown desperate and the people have had enough. If we don’t do anything then the situation could get out of control and our 1000 year government could be overthrown. We will have to consider carefully how to deal with the situation, do we reform the state or do we choose to suppress these so-called revolutionaries. In case we fail to do anything the consequences could be disastrous.\n$TOOLTIP_DELIMITER$\n@information! When the revolution progress reaches 100% then the revolution will erupt. The revolution will be launched by the estate that has the highest disatisfaction."
  br_je_hre_impending_revolution_completion_header: "Will prevent #b Revolution#! if:\n"
  finished_revolution_tt: "We have dealt with the revolution in a manner of our choice."
  br_je_hre_impending_revolution_failure_header: "The #b Revolution#! will erupt if:\n"
@@ -41,7 +44,7 @@
  ##Modifiers
  br_modifier_unreliable_food_security: "Unreliable Food Security"
  br_modifier_unpopular_regime: "Unpopular Regime"
- br_modifier_antiquated_regime: "Antiquated_regime"
+ br_modifier_antiquated_regime: "Antiquated Regime"
  br_modifier_imperial_residence: "Imperial Residence"
 
  # political movements
