--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -289,6 +289,13 @@
  goods_output_spices_mult_desc: "A bonus or penalty to the amount of @spice!$spice$ produced by buildings"
  goods_input_spices_mult: "@spice!$spice$ input"
  goods_input_spices_mult_desc: "A bonus or penalty to the amount of @spice!$spice$ consumed"
+ 
+ goods_input_horse_add: "@horse!$horse$ input"
+ goods_input_horse_add_desc: "The amount of @horse!$horse$ consumed by buildings"
+ 
+ goods_input_luxury_clothes_add: "@luxury_clothes!$luxury_clothes$ input"
+ goods_input_luxury_clothes_add_desc: "The amount of @luxury_clothes!$luxury_clothes$ consumed by buildings"
+
 
 
  horse: "Horse"
