--- a/localization/english/br_production_methods_l_english.yml
+++ b/localization/english/br_production_methods_l_english.yml
@@ -43,6 +43,26 @@
  br_pm_bureaucrat_building_palace_complex: "Bureaucratic Administration"
  br_pm_default_building_palace_complex: "Aristocratic Administration"
 
+ #Mining
+ pm_br_early_picks_and_shovels_building_coal_mine: "Primitive Coal Mining"
+ pm_br_early_picks_and_shovels_building_iron_mine: "Primitive Iron Mining"
+ pm_br_early_picks_and_shovels_building_lead_mine: "Primitive Lead Mining"
+ pm_br_early_picks_and_shovels_building_sulfur_mine: "Primitive Sulfur Mining"
+ pm_br_early_picks_and_shovels_building_gold_mine: "Primitive Gold Mining"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  ### GotB Additions ####
 
  ### buildings
