Added custom loc to the imperial residence concept
-Added custom loc to the imperial residence concept, to hide the residence if it isn't set

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -43,6 +43,9 @@
  je_revolution_reform_reason: "The time has come to reform the state in order to halt a revolution."
  je_revolution_suppress: "Revolution: Suppress"
  je_revolution_suppress_reason: "We will not bow to the demands of the people, the state will remain as is."
+ br_empty_string_loc: "" #this loc is an standard empty string
+ br_point_string_loc: "." #this loc is an standard point string
+ br_comma_string_loc: "," #this loc is an standard comma string
 
 
  ##Events
@@ -79,5 +82,6 @@
  br_imperial_residence_building_loc: "[GetPlayer.MakeScope.GetVariable( 'br_imperial_residence_var' ).GetBuilding.GetName]"
  br_concept_imperial_residence:1 "Imperial Residence"
  br_concept_imperial_residence:0 "Royal Residence"
- br_concept_imperial_residence_desc:1 "The $br_concept_imperial_residence$ is the location wheir the Imperial families lives, which is currently $br_imperial_residence_building_loc$."
+ br_concept_imperial_residence_desc:1 "The $br_concept_imperial_residence$ is the location wheir the Imperial families lives[GetPlayer.GetCustom('br_imperial_residence_location_loc')]"
+ br_concept_imperial_residence_location: ", which is currently $br_imperial_residence_building_loc$."
 #tooltip:tooltip_tag,tooltip_body,cooltip your text here#!
