Mining PMs renamed
Renamed the 'Primitive' and Picks and Shovels to better reflect

--- a/localization/english/replace/production_methods_l_english.yml
+++ b/localization/english/replace/production_methods_l_english.yml
@@ -1,2 +1,8 @@
 ﻿l_english:
  pm_no_equipment: "$pm_no_steam_automation$"
+
+ pm_picks_and_shovels_building_coal_mine: "Improved Coal Mining Tools"
+ pm_picks_and_shovels_building_iron_mine: "Improved Iron Mining Tools"
+ pm_picks_and_shovels_building_lead_mine: "Improved Lead Mining Tools"
+ pm_picks_and_shovels_building_sulfur_mine: "Improved Sulfur Mining Tools"
+ pm_picks_and_shovels_building_gold_mine: "Improved Gold Mining Tools"
