--- a/localization/english/br_production_methods_l_english.yml
+++ b/localization/english/br_production_methods_l_english.yml
@@ -44,24 +44,11 @@
  br_pm_default_building_palace_complex: "Aristocratic Administration"
 
  #Mining
- pm_br_early_picks_and_shovels_building_coal_mine: "Primitive Coal Mining"
- pm_br_early_picks_and_shovels_building_iron_mine: "Primitive Iron Mining"
- pm_br_early_picks_and_shovels_building_lead_mine: "Primitive Lead Mining"
- pm_br_early_picks_and_shovels_building_sulfur_mine: "Primitive Sulfur Mining"
- pm_br_early_picks_and_shovels_building_gold_mine: "Primitive Gold Mining"
-
-
-
-
-
-
-
-
-
-
-
-
-
+ pm_br_early_picks_and_shovels_building_coal_mine: "Early Coal Mining"
+ pm_br_early_picks_and_shovels_building_iron_mine: "Early Iron Mining"
+ pm_br_early_picks_and_shovels_building_lead_mine: "Early Lead Mining"
+ pm_br_early_picks_and_shovels_building_sulfur_mine: "Early Sulfur Mining"
+ pm_br_early_picks_and_shovels_building_gold_mine: "Early Gold Mining"
 
  ### GotB Additions ####
 
